@@ -24,31 +24,33 @@ import com.google.common.collect.Maps;
 import com.google.gson.annotations.SerializedName;
 import de.tr7zw.changeme.nbtapi.NBTCompound;
 import de.tr7zw.changeme.nbtapi.NBTPersistentDataContainer;
+import lombok.*;
 import net.william278.desertwell.util.ThrowingConsumer;
 import net.william278.husksync.BukkitHuskSync;
 import net.william278.husksync.HuskSync;
 import net.william278.husksync.adapter.Adaptable;
+import net.william278.husksync.config.Settings.SynchronizationSettings.AttributeSettings;
 import net.william278.husksync.user.BukkitUser;
-import org.apache.commons.lang.NotImplementedException;
 import org.bukkit.*;
 import org.bukkit.advancement.AdvancementProgress;
-import org.bukkit.attribute.Attribute;
 import org.bukkit.attribute.AttributeInstance;
+import org.bukkit.attribute.AttributeModifier;
 import org.bukkit.entity.EntityType;
 import org.bukkit.entity.Player;
 import org.bukkit.event.inventory.InventoryType;
+import org.bukkit.inventory.EquipmentSlotGroup;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.persistence.PersistentDataContainer;
 import org.bukkit.potion.PotionEffect;
 import org.bukkit.potion.PotionEffectType;
-import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
+import org.jetbrains.annotations.Range;
+import org.jetbrains.annotations.Unmodifiable;
 
 import java.util.*;
 import java.util.logging.Level;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 import static net.william278.husksync.util.BukkitKeyedAdapter.*;
 
@@ -61,19 +63,20 @@ public abstract class BukkitData implements Data {
 
     public abstract void apply(@NotNull BukkitUser user, @NotNull BukkitHuskSync plugin) throws IllegalStateException;
 
+    @Getter
     public static abstract class Items extends BukkitData implements Data.Items {
 
-        private final ItemStack[] contents;
+        private final @Nullable ItemStack @NotNull [] contents;
 
-        private Items(@NotNull ItemStack[] contents) {
-            this.contents = Arrays.stream(contents)
+        private Items(@Nullable ItemStack @NotNull [] contents) {
+            this.contents = Arrays.stream(contents.clone())
                     .map(i -> i == null || i.getType() == Material.AIR ? null : i)
                     .toArray(ItemStack[]::new);
         }
 
-        @NotNull
+        @Nullable
         @Override
-        public Stack[] getStack() {
+        public Stack @NotNull [] getStack() {
             return Arrays.stream(contents)
                     .map(stack -> stack != null ? new Stack(
                             stack.getType().getKey().toString(),
@@ -103,17 +106,12 @@ public abstract class BukkitData implements Data {
             this.setContents(((BukkitData.Items) contents).getContents());
         }
 
-        public void setContents(@NotNull ItemStack[] contents) {
+        public void setContents(@Nullable ItemStack @NotNull [] contents) {
             // Ensure the array is the correct length for the inventory
             if (contents.length != this.contents.length) {
                 contents = Arrays.copyOf(contents, this.contents.length);
             }
             System.arraycopy(contents, 0, this.contents, 0, this.contents.length);
-        }
-
-        @NotNull
-        public ItemStack[] getContents() {
-            return contents;
         }
 
         @Override
@@ -124,18 +122,20 @@ public abstract class BukkitData implements Data {
             return false;
         }
 
+        @Setter
+        @Getter
         public static class Inventory extends BukkitData.Items implements Data.Items.Inventory {
 
-            public static final int INVENTORY_SLOT_COUNT = 41;
+            @Range(from = 0, to = 8)
             private int heldItemSlot;
 
-            private Inventory(@NotNull ItemStack[] contents, int heldItemSlot) {
+            private Inventory(@Nullable ItemStack @NotNull [] contents, int heldItemSlot) {
                 super(contents);
                 this.heldItemSlot = heldItemSlot;
             }
 
             @NotNull
-            public static BukkitData.Items.Inventory from(@NotNull ItemStack[] contents, int heldItemSlot) {
+            public static BukkitData.Items.Inventory from(@Nullable ItemStack @NotNull [] contents, int heldItemSlot) {
                 return new BukkitData.Items.Inventory(contents, heldItemSlot);
             }
 
@@ -155,8 +155,9 @@ public abstract class BukkitData implements Data {
                 this.clearInventoryCraftingSlots(player);
                 player.setItemOnCursor(null);
                 player.getInventory().setContents(plugin.setMapViews(getContents()));
-                player.updateInventory();
                 player.getInventory().setHeldItemSlot(heldItemSlot);
+                //noinspection UnstableApiUsage
+                player.updateInventory();
             }
 
             private void clearInventoryCraftingSlots(@NotNull Player player) {
@@ -168,32 +169,22 @@ public abstract class BukkitData implements Data {
                 }
             }
 
-            @Override
-            public int getHeldItemSlot() {
-                return heldItemSlot;
-            }
-
-            @Override
-            public void setHeldItemSlot(int heldItemSlot) throws IllegalArgumentException {
-                if (heldItemSlot < 0 || heldItemSlot > 8) {
-                    throw new IllegalArgumentException("Held item slot must be between 0 and 8");
-                }
-                this.heldItemSlot = heldItemSlot;
-            }
-
         }
 
         public static class EnderChest extends BukkitData.Items implements Data.Items.EnderChest {
 
-            public static final int ENDER_CHEST_SLOT_COUNT = 27;
-
-            private EnderChest(@NotNull ItemStack[] contents) {
+            private EnderChest(@Nullable ItemStack @NotNull [] contents) {
                 super(contents);
             }
 
             @NotNull
-            public static BukkitData.Items.EnderChest adapt(@NotNull ItemStack[] items) {
-                return new BukkitData.Items.EnderChest(items);
+            public static BukkitData.Items.EnderChest adapt(@Nullable ItemStack @NotNull [] contents) {
+                return new BukkitData.Items.EnderChest(contents);
+            }
+
+            @NotNull
+            public static BukkitData.Items.EnderChest adapt(@NotNull Collection<ItemStack> items) {
+                return adapt(items.toArray(ItemStack[]::new));
             }
 
             @NotNull
@@ -210,7 +201,7 @@ public abstract class BukkitData implements Data {
 
         public static class ItemArray extends BukkitData.Items implements Data.Items {
 
-            private ItemArray(@NotNull ItemStack[] contents) {
+            private ItemArray(@Nullable ItemStack @NotNull [] contents) {
                 super(contents);
             }
 
@@ -220,55 +211,54 @@ public abstract class BukkitData implements Data {
             }
 
             @NotNull
-            public static ItemArray adapt(@NotNull ItemStack[] drops) {
+            public static ItemArray adapt(@Nullable ItemStack @NotNull [] drops) {
                 return new ItemArray(drops);
             }
 
             @Override
             public void apply(@NotNull BukkitUser user, @NotNull BukkitHuskSync plugin) throws IllegalStateException {
-                throw new NotImplementedException("A generic item array cannot be applied to a player");
+                throw new UnsupportedOperationException("A generic item array cannot be applied to a player");
             }
 
         }
 
     }
 
+    @Getter
+    @Setter
+    @AllArgsConstructor(access = AccessLevel.PRIVATE)
     public static class PotionEffects extends BukkitData implements Data.PotionEffects {
 
         private final Collection<PotionEffect> effects;
 
-        private PotionEffects(@NotNull Collection<PotionEffect> effects) {
-            this.effects = effects;
-        }
-
         @NotNull
-        public static BukkitData.PotionEffects from(@NotNull Collection<PotionEffect> effects) {
-            return new BukkitData.PotionEffects(effects);
+        public static BukkitData.PotionEffects from(@NotNull Collection<PotionEffect> sei) {
+            return new BukkitData.PotionEffects(Lists.newArrayList(sei.stream().filter(e -> !e.isAmbient()).toList()));
+
         }
 
         @NotNull
         public static BukkitData.PotionEffects adapt(@NotNull Collection<Effect> effects) {
-            return from(
-                    effects.stream()
-                            .map(effect -> new PotionEffect(
-                                    Objects.requireNonNull(
-                                            PotionEffectType.getByName(effect.type()),
-                                            "Invalid potion effect type"
-                                    ),
-                                    effect.duration(),
-                                    effect.amplifier(),
-                                    effect.isAmbient(),
-                                    effect.showParticles(),
-                                    effect.hasIcon()
-                            ))
-                            .toList()
-            );
+            return from(effects.stream()
+                    .map(effect -> {
+                        final PotionEffectType type = matchEffectType(effect.type());
+                        return type != null ? new PotionEffect(
+                                type,
+                                effect.duration(),
+                                effect.amplifier(),
+                                effect.isAmbient(),
+                                effect.showParticles(),
+                                effect.hasIcon()
+                        ) : null;
+                    })
+                    .filter(Objects::nonNull)
+                    .toList());
         }
 
         @NotNull
         @SuppressWarnings("unused")
         public static BukkitData.PotionEffects empty() {
-            return new BukkitData.PotionEffects(List.of());
+            return new BukkitData.PotionEffects(Lists.newArrayList());
         }
 
         @Override
@@ -284,10 +274,11 @@ public abstract class BukkitData implements Data {
 
         @NotNull
         @Override
+        @Unmodifiable
         public List<Effect> getActiveEffects() {
             return effects.stream()
                     .map(potionEffect -> new Effect(
-                            potionEffect.getType().getName().toLowerCase(Locale.ENGLISH),
+                            potionEffect.getType().getKey().toString(),
                             potionEffect.getAmplifier(),
                             potionEffect.getDuration(),
                             potionEffect.isAmbient(),
@@ -297,20 +288,15 @@ public abstract class BukkitData implements Data {
                     .toList();
         }
 
-        @NotNull
-        public Collection<PotionEffect> getEffects() {
-            return effects;
-        }
-
     }
 
+    @Getter
+    @Setter
+    @AllArgsConstructor(access = AccessLevel.PRIVATE)
+    @NoArgsConstructor(access = AccessLevel.PRIVATE)
     public static class Advancements extends BukkitData implements Data.Advancements {
 
         private List<Advancement> completed;
-
-        private Advancements(@NotNull List<Advancement> advancements) {
-            this.completed = advancements;
-        }
 
         // Iterate through the server advancement set and add all advancements to the list
         @NotNull
@@ -345,13 +331,13 @@ public abstract class BukkitData implements Data {
                         .filter(r -> r.getKey().equals(advancement.getKey().toString()))
                         .findFirst();
                 if (record.isEmpty()) {
-                    this.setAdvancement(plugin, advancement, player, List.of(), progress.getAwardedCriteria());
+                    this.setAdvancement(plugin, advancement, player, user, List.of(), progress.getAwardedCriteria());
                     return;
                 }
 
                 final Map<String, Date> criteria = record.get().getCompletedCriteria();
                 this.setAdvancement(
-                        plugin, advancement, player,
+                        plugin, advancement, player, user,
                         criteria.keySet().stream().filter(key -> !progress.getAwardedCriteria().contains(key)).toList(),
                         progress.getAwardedCriteria().stream().filter(key -> !criteria.containsKey(key)).toList()
                 );
@@ -359,17 +345,15 @@ public abstract class BukkitData implements Data {
         }
 
         private void setAdvancement(@NotNull HuskSync plugin,
-                                    @NotNull org.bukkit.advancement.Advancement advancement, @NotNull Player player,
-                                    @NotNull Collection<String> toAward, @NotNull Collection<String> toRevoke) {
+                                    @NotNull org.bukkit.advancement.Advancement advancement,
+                                    @NotNull Player player,
+                                    @NotNull BukkitUser user,
+                                    @NotNull Collection<String> toAward,
+                                    @NotNull Collection<String> toRevoke) {
             plugin.runSync(() -> {
                 // Track player exp level & progress
                 final int expLevel = player.getLevel();
                 final float expProgress = player.getExp();
-                boolean gameRuleUpdated = false;
-                if (Boolean.TRUE.equals(player.getWorld().getGameRuleValue(GameRule.ANNOUNCE_ADVANCEMENTS))) {
-                    player.getWorld().setGameRule(GameRule.ANNOUNCE_ADVANCEMENTS, false);
-                    gameRuleUpdated = true;
-                }
 
                 // Award and revoke advancement criteria
                 final AdvancementProgress progress = player.getAdvancementProgress(advancement);
@@ -377,14 +361,12 @@ public abstract class BukkitData implements Data {
                 toRevoke.forEach(progress::revokeCriteria);
 
                 // Set player experience and level (prevent advancement awards applying twice), reset game rule
-                if (!toAward.isEmpty() && player.getLevel() != expLevel || player.getExp() != expProgress) {
+                if (!toAward.isEmpty()
+                    && (player.getLevel() != expLevel || player.getExp() != expProgress)) {
                     player.setLevel(expLevel);
                     player.setExp(expProgress);
                 }
-                if (gameRuleUpdated) {
-                    player.getWorld().setGameRule(GameRule.ANNOUNCE_ADVANCEMENTS, true);
-                }
-            });
+            }, user);
         }
 
         // Performs a consuming function for every advancement registered on the server
@@ -392,20 +374,14 @@ public abstract class BukkitData implements Data {
             Bukkit.getServer().advancementIterator().forEachRemaining(consumer);
         }
 
-        @NotNull
-        @Override
-        public List<Advancement> getCompleted() {
-            return completed;
-        }
-
-        @Override
-        public void setCompleted(@NotNull List<Advancement> completed) {
-            this.completed = completed;
-        }
-
     }
 
+    @Getter
+    @Setter
+    @AllArgsConstructor(access = AccessLevel.PRIVATE)
+    @NoArgsConstructor(access = AccessLevel.PRIVATE)
     public static class Location extends BukkitData implements Data.Location, Adaptable {
+
         @SerializedName("x")
         private double x;
         @SerializedName("y")
@@ -418,19 +394,6 @@ public abstract class BukkitData implements Data {
         private float pitch;
         @SerializedName("world")
         private World world;
-
-        private Location(double x, double y, double z, float yaw, float pitch, @NotNull World world) {
-            this.x = x;
-            this.y = y;
-            this.z = z;
-            this.yaw = yaw;
-            this.pitch = pitch;
-            this.world = world;
-        }
-
-        @SuppressWarnings("unused")
-        private Location() {
-        }
 
         @NotNull
         public static BukkitData.Location from(double x, double y, double z,
@@ -466,299 +429,103 @@ public abstract class BukkitData implements Data {
             }
         }
 
-        @Override
-        public double getX() {
-            return x;
-        }
-
-        @Override
-        public void setX(double x) {
-            this.x = x;
-        }
-
-        @Override
-        public double getY() {
-            return y;
-        }
-
-        @Override
-        public void setY(double y) {
-            this.y = y;
-        }
-
-        @Override
-        public double getZ() {
-            return z;
-        }
-
-        @Override
-        public void setZ(double z) {
-            this.z = z;
-        }
-
-        @Override
-        public float getYaw() {
-            return yaw;
-        }
-
-        @Override
-        public void setYaw(float yaw) {
-            this.yaw = yaw;
-        }
-
-        @Override
-        public float getPitch() {
-            return pitch;
-        }
-
-        @Override
-        public void setPitch(float pitch) {
-            this.pitch = pitch;
-        }
-
-        @NotNull
-        @Override
-        public World getWorld() {
-            return world;
-        }
-
-        @Override
-        public void setWorld(@NotNull World world) {
-            this.world = world;
-        }
-
     }
 
-    // TODO: Consider using Paper's new-ish API for this instead (when it's merged)
-    public static class Statistics extends BukkitData implements Data.Statistics {
-        private Map<Statistic, Integer> genericStatistics;
-        private Map<Statistic, Map<Material, Integer>> blockStatistics;
-        private Map<Statistic, Map<Material, Integer>> itemStatistics;
-        private Map<Statistic, Map<EntityType, Integer>> entityStatistics;
+    @Getter
+    @AllArgsConstructor(access = AccessLevel.PRIVATE)
+    @NoArgsConstructor(access = AccessLevel.PRIVATE)
+    public static class Statistics extends BukkitData implements Data.Statistics, Adaptable {
 
-        private Statistics(@NotNull Map<Statistic, Integer> genericStatistics,
-                           @NotNull Map<Statistic, Map<Material, Integer>> blockStatistics,
-                           @NotNull Map<Statistic, Map<Material, Integer>> itemStatistics,
-                           @NotNull Map<Statistic, Map<EntityType, Integer>> entityStatistics) {
-            this.genericStatistics = genericStatistics;
-            this.blockStatistics = blockStatistics;
-            this.itemStatistics = itemStatistics;
-            this.entityStatistics = entityStatistics;
-        }
-
-        @SuppressWarnings("unused")
-        private Statistics() {
-        }
+        @SerializedName("generic")
+        private Map<String, Integer> genericStatistics;
+        @SerializedName("blocks")
+        private Map<String, Map<String, Integer>> blockStatistics;
+        @SerializedName("items")
+        private Map<String, Map<String, Integer>> itemStatistics;
+        @SerializedName("entities")
+        private Map<String, Map<String, Integer>> entityStatistics;
 
         @NotNull
         public static BukkitData.Statistics adapt(@NotNull Player player) {
-            return new BukkitData.Statistics(
-                    // Generic (untyped) stats
-                    Arrays.stream(Statistic.values())
-                            .filter(stat -> stat.getType() == Statistic.Type.UNTYPED)
-                            .filter(stat -> player.getStatistic(stat) != 0)
-                            .map(stat -> Map.entry(stat, player.getStatistic(stat)))
-                            .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue)),
-
-                    // Block stats
-                    Arrays.stream(Statistic.values())
-                            .filter(stat -> stat.getType() == Statistic.Type.BLOCK)
-                            .map(stat -> Map.entry(stat, Arrays.stream(Material.values())
-                                    .filter(Material::isBlock)
-                                    .filter(material -> player.getStatistic(stat, material) != 0)
-                                    .map(material -> Map.entry(material, player.getStatistic(stat, material)))
-                                    .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue))))
-                            .filter(entry -> !entry.getValue().isEmpty())
-                            .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue)),
-
-                    // Item stats
-                    Arrays.stream(Statistic.values())
-                            .filter(stat -> stat.getType() == Statistic.Type.ITEM)
-                            .map(stat -> Map.entry(stat, Arrays.stream(Material.values())
-                                    .filter(Material::isItem)
-                                    .filter(material -> player.getStatistic(stat, material) != 0)
-                                    .map(material -> Map.entry(material, player.getStatistic(stat, material)))
-                                    .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue))))
-                            .filter(entry -> !entry.getValue().isEmpty())
-                            .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue)),
-
-                    // Entity stats
-                    Arrays.stream(Statistic.values())
-                            .filter(stat -> stat.getType() == Statistic.Type.ENTITY)
-                            .map(stat -> Map.entry(stat, Arrays.stream(EntityType.values())
-                                    .filter(EntityType::isAlive)
-                                    .filter(entityType -> player.getStatistic(stat, entityType) != 0)
-                                    .map(entityType -> Map.entry(entityType, player.getStatistic(stat, entityType)))
-                                    .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue))))
-                            .filter(entry -> !entry.getValue().isEmpty())
-                            .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue))
-            );
-        }
-
-        @NotNull
-        public static BukkitData.Statistics from(@NotNull StatisticsMap stats) {
-            return new BukkitData.Statistics(
-                    stats.genericStats().entrySet().stream()
-                            .flatMap(entry -> {
-                                Statistic statistic = matchStatistic(entry.getKey());
-                                return statistic != null ? Stream.of(new AbstractMap.SimpleEntry<>(statistic, entry.getValue())) : Stream.empty();
-                            })
-                            .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue)),
-                    stats.blockStats().entrySet().stream()
-                            .flatMap(entry -> {
-                                Statistic statistic = matchStatistic(entry.getKey());
-                                return statistic != null ? Stream.of(new AbstractMap.SimpleEntry<>(statistic, entry.getValue())) : Stream.empty();
-                            })
-                            .collect(Collectors.toMap(
-                                    Map.Entry::getKey,
-                                    entry -> entry.getValue().entrySet().stream()
-                                            .flatMap(blockEntry -> {
-                                                Material material = matchMaterial(blockEntry.getKey());
-                                                return material != null ? Stream.of(new AbstractMap.SimpleEntry<>(material, blockEntry.getValue())) : Stream.empty();
-                                            })
-                                            .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue))
-                            )),
-                    stats.itemStats().entrySet().stream()
-                            .flatMap(entry -> {
-                                Statistic statistic = matchStatistic(entry.getKey());
-                                return statistic != null ? Stream.of(new AbstractMap.SimpleEntry<>(statistic, entry.getValue())) : Stream.empty();
-                            })
-                            .collect(Collectors.toMap(
-                                    Map.Entry::getKey,
-                                    entry -> entry.getValue().entrySet().stream()
-                                            .flatMap(itemEntry -> {
-                                                Material material = matchMaterial(itemEntry.getKey());
-                                                return material != null ? Stream.of(new AbstractMap.SimpleEntry<>(material, itemEntry.getValue())) : Stream.empty();
-                                            })
-                                            .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue))
-                            )),
-                    stats.entityStats().entrySet().stream()
-                            .flatMap(entry -> {
-                                Statistic statistic = matchStatistic(entry.getKey());
-                                return statistic != null ? Stream.of(new AbstractMap.SimpleEntry<>(statistic, entry.getValue())) : Stream.empty();
-                            })
-                            .collect(Collectors.toMap(
-                                    Map.Entry::getKey,
-                                    entry -> entry.getValue().entrySet().stream()
-                                            .flatMap(itemEntry -> {
-                                                EntityType entityType = matchEntityType(itemEntry.getKey());
-                                                return entityType != null ? Stream.of(new AbstractMap.SimpleEntry<>(entityType, itemEntry.getValue())) : Stream.empty();
-                                            })
-                                            .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue))
-                            ))
-            );
-        }
-
-        @NotNull
-        public static BukkitData.Statistics from(@NotNull Map<Statistic, Integer> genericStats,
-                                                 @NotNull Map<Statistic, Map<Material, Integer>> blockStats,
-                                                 @NotNull Map<Statistic, Map<Material, Integer>> itemStats,
-                                                 @NotNull Map<Statistic, Map<EntityType, Integer>> entityStats) {
-            return new BukkitData.Statistics(genericStats, blockStats, itemStats, entityStats);
-        }
-
-        @NotNull
-        @ApiStatus.Internal
-        public static StatisticsMap createStatisticsMap(@NotNull Map<String, Integer> genericStats,
-                                                        @NotNull Map<String, Map<String, Integer>> blockStats,
-                                                        @NotNull Map<String, Map<String, Integer>> itemStats,
-                                                        @NotNull Map<String, Map<String, Integer>> entityStats) {
-            return new StatisticsMap(genericStats, blockStats, itemStats, entityStats);
-        }
-
-        @Override
-        public void apply(@NotNull BukkitUser user, @NotNull BukkitHuskSync plugin) throws IllegalStateException {
-            genericStatistics.forEach((stat, value) -> applyStat(user, stat, null, value));
-            blockStatistics.forEach((stat, m) -> m.forEach((block, value) -> applyStat(user, stat, block, value)));
-            itemStatistics.forEach((stat, m) -> m.forEach((item, value) -> applyStat(user, stat, item, value)));
-            entityStatistics.forEach((stat, m) -> m.forEach((entity, value) -> applyStat(user, stat, entity, value)));
-        }
-
-        private void applyStat(@NotNull UserDataHolder user, @NotNull Statistic stat, @Nullable Object type, int value) {
-            try {
-                final Player player = ((BukkitUser) user).getPlayer();
-                if (type == null) {
-                    player.setStatistic(stat, value);
-                } else if (type instanceof Material) {
-                    player.setStatistic(stat, (Material) type, value);
-                } else if (type instanceof EntityType) {
-                    player.setStatistic(stat, (EntityType) type, value);
+            final Map<String, Integer> generic = Maps.newHashMap();
+            final Map<String, Map<String, Integer>> blocks = Maps.newHashMap(),
+                    items = Maps.newHashMap(), entities = Maps.newHashMap();
+            Registry.STATISTIC.forEach(id -> {
+                switch (id.getType()) {
+                    case UNTYPED -> addStatistic(player, id, generic);
+                    // Todo - Future - Use BLOCK and ITEM registries when API stabilizes
+                    case BLOCK -> addStatistic(player, id, Registry.MATERIAL, blocks);
+                    case ITEM -> addStatistic(player, id, Registry.MATERIAL, items);
+                    case ENTITY -> addStatistic(player, id, Registry.ENTITY_TYPE, entities);
                 }
-            } catch (IllegalArgumentException ignored) {
+            });
+            return new BukkitData.Statistics(generic, blocks, items, entities);
+        }
+
+        @NotNull
+        public static BukkitData.Statistics from(@NotNull Map<String, Integer> generic,
+                                                 @NotNull Map<String, Map<String, Integer>> blocks,
+                                                 @NotNull Map<String, Map<String, Integer>> items,
+                                                 @NotNull Map<String, Map<String, Integer>> entities) {
+            return new BukkitData.Statistics(generic, blocks, items, entities);
+        }
+
+        private static void addStatistic(@NotNull Player p, @NotNull Statistic id, @NotNull Map<String, Integer> map) {
+            final int stat = p.getStatistic(id);
+            if (stat != 0) {
+                map.put(id.getKey().getKey(), stat);
             }
         }
 
-        @NotNull
+        private static <R extends Keyed> void addStatistic(@NotNull Player p, @NotNull Statistic id,
+                                                           @NotNull Registry<R> registry,
+                                                           @NotNull Map<String, Map<String, Integer>> map) {
+            registry.forEach(i -> {
+                try {
+                    final int stat = i instanceof Material m ? p.getStatistic(id, m) :
+                            (i instanceof EntityType e ? p.getStatistic(id, e) : -1);
+                    if (stat != 0) {
+                        map.compute(id.getKey().getKey(), (k, v) -> v == null ? Maps.newHashMap() : v)
+                                .put(i.getKey().getKey(), stat);
+                    }
+                } catch (IllegalStateException ignored) {
+                }
+            });
+        }
+
         @Override
-        public Map<String, Integer> getGenericStatistics() {
-            return convertStatistics(genericStatistics);
+        public void apply(@NotNull BukkitUser user, @NotNull BukkitHuskSync p) {
+            genericStatistics.forEach((k, v) -> applyStat(p, user, k, Statistic.Type.UNTYPED, v));
+            blockStatistics.forEach((k, m) -> m.forEach((b, v) -> applyStat(p, user, k, Statistic.Type.BLOCK, v, b)));
+            itemStatistics.forEach((k, m) -> m.forEach((i, v) -> applyStat(p, user, k, Statistic.Type.ITEM, v, i)));
+            entityStatistics.forEach((k, m) -> m.forEach((e, v) -> applyStat(p, user, k, Statistic.Type.ENTITY, v, e)));
         }
 
-        @NotNull
-        @Override
-        public Map<String, Map<String, Integer>> getBlockStatistics() {
-            return blockStatistics.entrySet().stream().filter(entry -> entry.getKey() != null).collect(
-                    TreeMap::new,
-                    (m, e) -> getKeyName(e.getKey()).ifPresent(key -> m.put(key, convertStatistics(e.getValue()))),
-                    TreeMap::putAll
-            );
-        }
+        private void applyStat(@NotNull HuskSync plugin, @NotNull UserDataHolder user, @NotNull String id,
+                               @NotNull Statistic.Type type, int value, @NotNull String... key) {
+            final Player player = ((BukkitUser) user).getPlayer();
+            final Statistic stat = matchStatistic(id);
+            if (stat == null) {
+                return;
+            }
 
-        @NotNull
-        @Override
-        public Map<String, Map<String, Integer>> getItemStatistics() {
-            return itemStatistics.entrySet().stream().filter(entry -> entry.getKey() != null).collect(
-                    TreeMap::new,
-                    (m, e) -> getKeyName(e.getKey()).ifPresent(key -> m.put(key, convertStatistics(e.getValue()))),
-                    TreeMap::putAll
-            );
-        }
-
-        @NotNull
-        @Override
-        public Map<String, Map<String, Integer>> getEntityStatistics() {
-            return entityStatistics.entrySet().stream().filter(entry -> entry.getKey() != null).collect(
-                    TreeMap::new,
-                    (m, e) -> getKeyName(e.getKey()).ifPresent(key -> m.put(key, convertStatistics(e.getValue()))),
-                    TreeMap::putAll
-            );
-        }
-
-        @NotNull
-        private <T extends Keyed> Map<String, Integer> convertStatistics(@NotNull Map<T, Integer> stats) {
-            return stats.entrySet().stream().filter(entry -> entry.getKey() != null).collect(
-                    TreeMap::new,
-                    (m, e) -> getKeyName(e.getKey()).ifPresent(key -> m.put(key, e.getValue())),
-                    TreeMap::putAll
-            );
-        }
-
-        @NotNull
-        protected StatisticsMap getStatisticsSet() {
-            return new StatisticsMap(
-                    getGenericStatistics(),
-                    getBlockStatistics(),
-                    getItemStatistics(),
-                    getEntityStatistics()
-            );
-        }
-
-        public record StatisticsMap(
-                @SerializedName("generic") @NotNull Map<String, Integer> genericStats,
-                @SerializedName("blocks") @NotNull Map<String, Map<String, Integer>> blockStats,
-                @SerializedName("items") @NotNull Map<String, Map<String, Integer>> itemStats,
-                @SerializedName("entities") @NotNull Map<String, Map<String, Integer>> entityStats
-        ) {
+            try {
+                switch (type) {
+                    case UNTYPED -> player.setStatistic(stat, value);
+                    case BLOCK, ITEM -> player.setStatistic(stat, Objects.requireNonNull(matchMaterial(key[0])), value);
+                    case ENTITY -> player.setStatistic(stat, Objects.requireNonNull(matchEntityType(key[0])), value);
+                }
+            } catch (Throwable a) {
+                plugin.log(Level.WARNING, "Failed to apply statistic " + id, a);
+            }
         }
 
     }
 
+    @Getter
+    @AllArgsConstructor(access = AccessLevel.PRIVATE)
     public static class PersistentData extends BukkitData implements Data.PersistentData {
         private final NBTCompound persistentData;
-
-        private PersistentData(@NotNull NBTCompound persistentData) {
-            this.persistentData = persistentData;
-        }
 
         @NotNull
         public static BukkitData.PersistentData adapt(@NotNull PersistentDataContainer persistentData) {
@@ -779,140 +546,175 @@ public abstract class BukkitData implements Data {
             container.mergeCompound(persistentData);
         }
 
+    }
+
+    @Getter
+    @AllArgsConstructor(access = AccessLevel.PRIVATE)
+    @NoArgsConstructor(access = AccessLevel.PRIVATE)
+    @SuppressWarnings("UnstableApiUsage")
+    public static class Attributes extends BukkitData implements Data.Attributes, Adaptable {
+
+        private List<Attribute> attributes;
+
         @NotNull
-        public NBTCompound getPersistentData() {
-            return persistentData;
+        public static BukkitData.Attributes adapt(@NotNull Player player, @NotNull HuskSync plugin) {
+            final List<Attribute> attributes = Lists.newArrayList();
+            final AttributeSettings settings = plugin.getSettings().getSynchronization().getAttributes();
+            Registry.ATTRIBUTE.forEach(id -> {
+                final AttributeInstance instance = player.getAttribute(id);
+                if (settings.isIgnoredAttribute(id.getKey().toString()) || instance == null) {
+                    return; // We don't sync attributes not marked as to be synced
+                }
+                attributes.add(adapt(instance, settings));
+            });
+            return new BukkitData.Attributes(attributes);
+        }
+
+        public Optional<Attribute> getAttribute(@NotNull org.bukkit.attribute.Attribute id) {
+            return attributes.stream().filter(attribute -> attribute.name().equals(id.getKey().toString())).findFirst();
+        }
+
+        @SuppressWarnings("unused")
+        public Optional<Attribute> getAttribute(@NotNull String key) {
+            final org.bukkit.attribute.Attribute attribute = matchAttribute(key);
+            if (attribute == null) {
+                return Optional.empty();
+            }
+            return getAttribute(attribute);
+        }
+
+        @NotNull
+        private static Attribute adapt(@NotNull AttributeInstance instance, @NotNull AttributeSettings settings) {
+            return new Attribute(
+                    instance.getAttribute().getKey().toString(),
+                    instance.getBaseValue(),
+                    instance.getModifiers().stream()
+                            .filter(modifier -> !settings.isIgnoredModifier(modifier.getName()))
+                            .filter(modifier -> modifier.getSlotGroup() != EquipmentSlotGroup.ANY)
+                            .map(BukkitData.Attributes::adapt).collect(Collectors.toSet())
+            );
+        }
+
+        @NotNull
+        private static Modifier adapt(@NotNull AttributeModifier modifier) {
+            return new Modifier(
+                    modifier.getKey().toString(),
+                    modifier.getAmount(),
+                    modifier.getOperation().ordinal(),
+                    modifier.getSlotGroup().toString()
+            );
+        }
+
+        private static void applyAttribute(@Nullable AttributeInstance instance, @Nullable Attribute attribute) {
+            if (instance == null) {
+                return;
+            }
+            instance.getModifiers().forEach(instance::removeModifier);
+            instance.setBaseValue(attribute == null ? instance.getValue() : attribute.baseValue());
+            if (attribute != null) {
+                attribute.modifiers().stream()
+                        .filter(mod -> instance.getModifiers().stream().map(AttributeModifier::getName)
+                                .noneMatch(n -> n.equals(mod.name())))
+                        .distinct().filter(mod -> !mod.hasUuid())
+                        .forEach(mod -> instance.addModifier(adapt(mod)));
+            }
+        }
+
+        @NotNull
+        private static AttributeModifier adapt(@NotNull Modifier modifier) {
+            return new AttributeModifier(
+                    Objects.requireNonNull(NamespacedKey.fromString(modifier.name())),
+                    modifier.amount(),
+                    AttributeModifier.Operation.values()[modifier.operation()],
+                    Optional.ofNullable(EquipmentSlotGroup.getByName(modifier.slotGroup())).orElse(EquipmentSlotGroup.ANY)
+            );
+        }
+
+        @Override
+        public void apply(@NotNull BukkitUser user, @NotNull BukkitHuskSync plugin) throws IllegalStateException {
+            final AttributeSettings settings = plugin.getSettings().getSynchronization().getAttributes();
+            Registry.ATTRIBUTE.forEach(id -> {
+                if (settings.isIgnoredAttribute(id.getKey().toString())) {
+                    return;
+                }
+                applyAttribute(user.getPlayer().getAttribute(id), getAttribute(id).orElse(null));
+            });
         }
 
     }
 
+    @Getter
+    @Setter
+    @AllArgsConstructor(access = AccessLevel.PRIVATE)
+    @NoArgsConstructor(access = AccessLevel.PRIVATE)
     public static class Health extends BukkitData implements Data.Health, Adaptable {
         @SerializedName("health")
         private double health;
-        @SerializedName("max_health")
-        private double maxHealth;
         @SerializedName("health_scale")
         private double healthScale;
-
-        private Health(double health, double maxHealth, double healthScale) {
-            this.health = health;
-            this.maxHealth = maxHealth;
-            this.healthScale = healthScale;
-        }
-
-        @SuppressWarnings("unused")
-        private Health() {
-        }
+        @SerializedName("is_health_scaled")
+        private boolean isHealthScaled;
 
         @NotNull
-        public static BukkitData.Health from(double health, double maxHealth, double healthScale) {
-            return new BukkitData.Health(health, maxHealth, healthScale);
+        public static BukkitData.Health from(double health, double scale, boolean isScaled) {
+            return new BukkitData.Health(health, scale, isScaled);
+        }
+
+        /**
+         * @deprecated Use {@link #from(double, double, boolean)} instead
+         */
+        @NotNull
+        @Deprecated(since = "3.5.4")
+        public static BukkitData.Health from(double health, double scale) {
+            return from(health, scale, false);
+        }
+
+        /**
+         * @deprecated Use {@link #from(double, double, boolean)} instead
+         */
+        @NotNull
+        @Deprecated(forRemoval = true, since = "3.5")
+        public static BukkitData.Health from(double health, @SuppressWarnings("unused") double max, double scale) {
+            return from(health, scale, false);
         }
 
         @NotNull
         public static BukkitData.Health adapt(@NotNull Player player) {
             return from(
                     player.getHealth(),
-                    getMaxHealth(player),
-                    player.isHealthScaled() ? player.getHealthScale() : 0d
+                    player.getHealthScale(),
+                    player.isHealthScaled()
             );
         }
 
         @Override
+        @SuppressWarnings("deprecation")
         public void apply(@NotNull BukkitUser user, @NotNull BukkitHuskSync plugin) throws IllegalStateException {
             final Player player = user.getPlayer();
 
-            // Set max health
-            final AttributeInstance maxHealth = getMaxHealthAttribute(player);
-            try {
-                if (plugin.getSettings().getSynchronization().isSynchronizeMaxHealth() && this.maxHealth != 0) {
-                    maxHealth.setBaseValue(this.maxHealth);
-                }
-            } catch (Throwable e) {
-                plugin.log(Level.WARNING, String.format("Failed setting the max health of %s to %s",
-                        player.getName(), this.maxHealth), e);
-            }
-
             // Set health
             try {
-                final double health = player.getHealth();
-                player.setHealth(Math.min(health, maxHealth.getBaseValue()));
+                player.setHealth(Math.min(health, player.getMaxHealth()));
             } catch (Throwable e) {
-                plugin.log(Level.WARNING, String.format("Failed setting the health of %s to %s",
-                        player.getName(), this.maxHealth), e);
+                plugin.log(Level.WARNING, "Error setting %s's health to %s".formatted(player.getName(), health), e);
             }
 
             // Set health scale
+            double scale = healthScale <= 0 ? player.getMaxHealth() : healthScale;
             try {
-                if (this.healthScale != 0d) {
-                    player.setHealthScaled(true);
-                    player.setHealthScale(this.healthScale);
-                } else {
-                    player.setHealthScaled(false);
-                    player.setHealthScale(this.maxHealth);
-                }
+                player.setHealthScale(scale);
+                player.setHealthScaled(isHealthScaled);
             } catch (Throwable e) {
-                plugin.log(Level.WARNING, String.format("Failed setting the health scale of %s to %s",
-                        player.getName(), this.healthScale), e);
+                plugin.log(Level.WARNING, "Error setting %s's health scale to %s".formatted(player.getName(), scale), e);
             }
-        }
-
-        // Returns the max health of a player, accounting for health boost potion effects
-        private static double getMaxHealth(@NotNull Player player) {
-            // Get the base value of the attribute (ignore armor, items that give health boosts, etc.)
-            double maxHealth = getMaxHealthAttribute(player).getBaseValue();
-
-            // Subtract health boost potion effects from stored max health
-            if (player.hasPotionEffect(PotionEffectType.HEALTH_BOOST) && maxHealth > 20d) {
-                final PotionEffect healthBoost = Objects.requireNonNull(
-                        player.getPotionEffect(PotionEffectType.HEALTH_BOOST), "Health boost effect was null"
-                );
-                maxHealth -= (4 * (healthBoost.getAmplifier() + 1));
-            }
-
-            return maxHealth;
-        }
-
-        // Returns the max health attribute of a player
-        @NotNull
-        private static AttributeInstance getMaxHealthAttribute(@NotNull Player player) {
-            return Objects.requireNonNull(
-                    player.getAttribute(Attribute.GENERIC_MAX_HEALTH), "Max health attribute was null"
-            );
-        }
-
-        @Override
-        public double getHealth() {
-            return health;
-        }
-
-        @Override
-        public void setHealth(double health) {
-            this.health = health;
-        }
-
-        @Override
-        public double getMaxHealth() {
-            return maxHealth;
-        }
-
-        @Override
-        public void setMaxHealth(double maxHealth) {
-            this.maxHealth = maxHealth;
-        }
-
-        @Override
-        public double getHealthScale() {
-            return healthScale;
-        }
-
-        @Override
-        public void setHealthScale(double healthScale) {
-            this.healthScale = healthScale;
         }
 
     }
 
+    @Getter
+    @Setter
+    @AllArgsConstructor(access = AccessLevel.PRIVATE)
+    @NoArgsConstructor(access = AccessLevel.PRIVATE)
     public static class Hunger extends BukkitData implements Data.Hunger, Adaptable {
 
         @SerializedName("food_level")
@@ -921,16 +723,6 @@ public abstract class BukkitData implements Data {
         private float saturation;
         @SerializedName("exhaustion")
         private float exhaustion;
-
-        private Hunger(int foodLevel, float saturation, float exhaustion) {
-            this.foodLevel = foodLevel;
-            this.saturation = saturation;
-            this.exhaustion = exhaustion;
-        }
-
-        @SuppressWarnings("unused")
-        private Hunger() {
-        }
 
         @NotNull
         public static BukkitData.Hunger adapt(@NotNull Player player) {
@@ -950,37 +742,12 @@ public abstract class BukkitData implements Data {
             player.setExhaustion(exhaustion);
         }
 
-        @Override
-        public int getFoodLevel() {
-            return foodLevel;
-        }
-
-        @Override
-        public void setFoodLevel(int foodLevel) {
-            this.foodLevel = foodLevel;
-        }
-
-        @Override
-        public float getSaturation() {
-            return saturation;
-        }
-
-        @Override
-        public void setSaturation(float saturation) {
-            this.saturation = saturation;
-        }
-
-        @Override
-        public float getExhaustion() {
-            return exhaustion;
-        }
-
-        @Override
-        public void setExhaustion(float exhaustion) {
-            this.exhaustion = exhaustion;
-        }
     }
 
+    @Getter
+    @Setter
+    @AllArgsConstructor(access = AccessLevel.PRIVATE)
+    @NoArgsConstructor(access = AccessLevel.PRIVATE)
     public static class Experience extends BukkitData implements Data.Experience, Adaptable {
 
         @SerializedName("total_experience")
@@ -991,16 +758,6 @@ public abstract class BukkitData implements Data {
 
         @SerializedName("exp_progress")
         private float expProgress;
-
-        private Experience(int totalExperience, int expLevel, float expProgress) {
-            this.totalExperience = totalExperience;
-            this.expLevel = expLevel;
-            this.expProgress = expProgress;
-        }
-
-        @SuppressWarnings("unused")
-        private Experience() {
-        }
 
         @NotNull
         public static BukkitData.Experience from(int totalExperience, int expLevel, float expProgress) {
@@ -1020,100 +777,67 @@ public abstract class BukkitData implements Data {
             player.setExp(expProgress);
         }
 
-        @Override
-        public int getTotalExperience() {
-            return totalExperience;
-        }
-
-        @Override
-        public void setTotalExperience(int totalExperience) {
-            this.totalExperience = totalExperience;
-        }
-
-        @Override
-        public int getExpLevel() {
-            return expLevel;
-        }
-
-        @Override
-        public void setExpLevel(int expLevel) {
-            this.expLevel = expLevel;
-        }
-
-        @Override
-        public float getExpProgress() {
-            return expProgress;
-        }
-
-        @Override
-        public void setExpProgress(float expProgress) {
-            this.expProgress = expProgress;
-        }
-
     }
 
+    @Getter
+    @Setter
+    @AllArgsConstructor(access = AccessLevel.PRIVATE)
+    @NoArgsConstructor(access = AccessLevel.PRIVATE)
     public static class GameMode extends BukkitData implements Data.GameMode, Adaptable {
 
         @SerializedName("game_mode")
         private String gameMode;
-        @SerializedName("allow_flight")
-        private boolean allowFlight;
-        @SerializedName("is_flying")
-        private boolean isFlying;
 
-        private GameMode(@NotNull String gameMode, boolean allowFlight, boolean isFlying) {
-            this.gameMode = gameMode;
-            this.allowFlight = allowFlight;
-            this.isFlying = isFlying;
+        @NotNull
+        public static BukkitData.GameMode from(@NotNull String gameMode) {
+            return new BukkitData.GameMode(gameMode);
         }
 
         @NotNull
+        @Deprecated(forRemoval = true, since = "3.5")
+        @SuppressWarnings("unused")
         public static BukkitData.GameMode from(@NotNull String gameMode, boolean allowFlight, boolean isFlying) {
-            return new BukkitData.GameMode(gameMode, allowFlight, isFlying);
+            return new BukkitData.GameMode(gameMode);
         }
 
         @NotNull
         public static BukkitData.GameMode adapt(@NotNull Player player) {
-            return from(player.getGameMode().name(), player.getAllowFlight(), player.isFlying());
+            return from(player.getGameMode().name());
+        }
+
+        @Override
+        public void apply(@NotNull BukkitUser user, @NotNull BukkitHuskSync plugin) throws IllegalStateException {
+            user.getPlayer().setGameMode(org.bukkit.GameMode.valueOf(gameMode));
+        }
+
+    }
+
+    @Getter
+    @Setter
+    @AllArgsConstructor(access = AccessLevel.PRIVATE)
+    @NoArgsConstructor(access = AccessLevel.PRIVATE)
+    public static class FlightStatus extends BukkitData implements Data.FlightStatus, Adaptable {
+
+        @SerializedName("allow_flight")
+        private boolean allowFlight;
+        @SerializedName("is_flying")
+        private boolean flying;
+
+        @NotNull
+        public static BukkitData.FlightStatus from(boolean allowFlight, boolean flying) {
+            return new BukkitData.FlightStatus(allowFlight, allowFlight && flying);
+        }
+
+        @NotNull
+        public static BukkitData.FlightStatus adapt(@NotNull Player player) {
+            return from(player.getAllowFlight(), player.isFlying());
         }
 
         @Override
         public void apply(@NotNull BukkitUser user, @NotNull BukkitHuskSync plugin) throws IllegalStateException {
             final Player player = user.getPlayer();
-            player.setGameMode(org.bukkit.GameMode.valueOf(gameMode));
             player.setAllowFlight(allowFlight);
-            player.setFlying(allowFlight && isFlying);
-        }
-
-        @NotNull
-        @Override
-        public String getGameMode() {
-            return gameMode;
-        }
-
-        @Override
-        public void setGameMode(@NotNull String gameMode) {
-            this.gameMode = gameMode;
-        }
-
-        @Override
-        public boolean getAllowFlight() {
-            return allowFlight;
-        }
-
-        @Override
-        public void setAllowFlight(boolean allowFlight) {
-            this.allowFlight = allowFlight;
-        }
-
-        @Override
-        public boolean getIsFlying() {
-            return isFlying;
-        }
-
-        @Override
-        public void setIsFlying(boolean isFlying) {
-            this.isFlying = isFlying;
+            player.setFlying(allowFlight && flying);
         }
 
     }
