@@ -31,12 +31,15 @@ import net.william278.mapdataapi.MapData;
 import org.bukkit.Bukkit;
 import org.bukkit.Material;
 import org.bukkit.World;
+import org.bukkit.block.Container;
 import org.bukkit.entity.Player;
 import org.bukkit.inventory.ItemStack;
+import org.bukkit.inventory.meta.BlockStateMeta;
 import org.bukkit.inventory.meta.MapMeta;
 import org.bukkit.map.*;
 import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
 
 import java.awt.*;
 import java.io.File;
@@ -75,8 +78,8 @@ public interface BukkitMapPersister {
      * @param items the array of {@link ItemStack}s to apply persisted locked maps to
      * @return the array of {@link ItemStack}s with persisted locked maps applied
      */
-    @NotNull
-    default ItemStack[] setMapViews(@NotNull ItemStack[] items) {
+    @Nullable
+    default ItemStack @NotNull [] setMapViews(@Nullable ItemStack @NotNull [] items) {
         if (!getPlugin().getSettings().getSynchronization().isPersistLockedMaps()) {
             return items;
         }
@@ -93,6 +96,9 @@ public interface BukkitMapPersister {
             }
             if (item.getType() == Material.FILLED_MAP && item.hasItemMeta()) {
                 items[i] = function.apply(item);
+            } else if (item.getItemMeta() instanceof BlockStateMeta b && b.getBlockState() instanceof Container box) {
+                forEachMap(box.getInventory().getContents(), function);
+                b.setBlockState(box);
             }
         }
         return items;
@@ -116,7 +122,8 @@ public interface BukkitMapPersister {
             }
 
             // Render the map
-            final PersistentMapCanvas canvas = new PersistentMapCanvas(view);
+            final int dataVersion = getPlugin().getDataVersion(getPlugin().getMinecraftVersion());
+            final PersistentMapCanvas canvas = new PersistentMapCanvas(view, dataVersion);
             for (MapRenderer renderer : view.getRenderers()) {
                 renderer.render(view, canvas, delegateRenderer);
                 getPlugin().debug(String.format("Rendered locked map canvas to view (#%s)", view.getId()));
@@ -134,6 +141,7 @@ public interface BukkitMapPersister {
 
     @NotNull
     private ItemStack applyMapView(@NotNull ItemStack map) {
+        final int dataVersion = getPlugin().getDataVersion(getPlugin().getMinecraftVersion());
         final MapMeta meta = Objects.requireNonNull((MapMeta) map.getItemMeta());
         NBT.get(map, nbt -> {
             if (!nbt.hasTag(MAP_DATA_KEY)) {
@@ -172,8 +180,9 @@ public interface BukkitMapPersister {
             final MapData canvasData;
             try {
                 getPlugin().debug("Deserializing map data from NBT and generating view...");
-                canvasData = MapData.fromByteArray(Objects.requireNonNull(mapData.getByteArray(MAP_PIXEL_DATA_KEY),
-                        "Map pixel data is null"));
+                canvasData = MapData.fromByteArray(
+                        dataVersion,
+                        Objects.requireNonNull(mapData.getByteArray(MAP_PIXEL_DATA_KEY), "Pixel data null!"));
             } catch (Throwable e) {
                 getPlugin().log(Level.WARNING, "Failed to deserialize map data from NBT", e);
                 return;
@@ -270,7 +279,7 @@ public interface BukkitMapPersister {
 
     @NotNull
     private static World getDefaultMapWorld() {
-        final World world = Bukkit.getWorlds().get(0);
+        final World world = Bukkit.getWorlds().getFirst();
         if (world == null) {
             throw new IllegalStateException("No worlds are loaded on the server!");
         }
@@ -302,7 +311,7 @@ public interface BukkitMapPersister {
             // We set the pixels in this order to avoid the map being rendered upside down
             for (int i = 0; i < 128; i++) {
                 for (int j = 0; j < 128; j++) {
-                    canvas.setPixel(j, i, (byte) canvasData.getColorAt(i, j));
+                    canvas.setPixelColor(j, i, canvasData.getMapColorAt(i, j));
                 }
             }
 
@@ -351,11 +360,13 @@ public interface BukkitMapPersister {
      */
     class PersistentMapCanvas implements MapCanvas {
 
+        private final int mapDataVersion;
         private final MapView mapView;
         private final int[][] pixels = new int[128][128];
         private MapCursorCollection cursors;
 
-        private PersistentMapCanvas(@NotNull MapView mapView) {
+        private PersistentMapCanvas(@NotNull MapView mapView, int mapDataVersion) {
+            this.mapDataVersion = mapDataVersion;
             this.mapView = mapView;
         }
 
@@ -377,18 +388,38 @@ public interface BukkitMapPersister {
         }
 
         @Override
+        @Deprecated
         public void setPixel(int x, int y, byte color) {
             pixels[x][y] = color;
         }
 
         @Override
+        @Deprecated
         public byte getPixel(int x, int y) {
             return (byte) pixels[x][y];
         }
 
         @Override
+        @Deprecated
         public byte getBasePixel(int x, int y) {
             return getPixel(x, y);
+        }
+
+        @Override
+        public void setPixelColor(int i, int i1, @Nullable Color color) {
+            pixels[i][i1] = color == null ? 0 : color.getRGB();
+        }
+
+        @Nullable
+        @Override
+        public Color getPixelColor(int x, int y) {
+            return getBasePixelColor(x, y);
+        }
+
+        @NotNull
+        @Override
+        public Color getBasePixelColor(int x, int y) {
+            return new Color(pixels[x][y]);
         }
 
         @Override
@@ -421,7 +452,7 @@ public interface BukkitMapPersister {
             final String BANNER_PREFIX = "banner_";
             for (int i = 0; i < getCursors().size(); i++) {
                 final MapCursor cursor = getCursors().getCursor(i);
-                final String type = cursor.getType().name().toLowerCase(Locale.ENGLISH);
+                final String type = cursor.getType().getKey().getKey();
                 if (type.startsWith(BANNER_PREFIX)) {
                     banners.add(new MapBanner(
                             type.replaceAll(BANNER_PREFIX, ""),
@@ -431,8 +462,9 @@ public interface BukkitMapPersister {
                             cursor.getY()
                     ));
                 }
+
             }
-            return MapData.fromPixels(pixels, getDimension(), (byte) 2, banners, List.of());
+            return MapData.fromPixels(mapDataVersion, pixels, getDimension(), (byte) 2, banners, List.of());
         }
     }
 
