@@ -28,9 +28,12 @@ import org.jetbrains.annotations.NotNull;
 
 import java.io.*;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.time.format.DateTimeFormatter;
 import java.util.Locale;
 import java.util.StringJoiner;
@@ -80,7 +83,7 @@ public class DataDumper {
     @NotNull
     public String toWeb() {
         try {
-            final URL url = new URL(LOGS_SITE_ENDPOINT);
+            final URL url = URI.create(LOGS_SITE_ENDPOINT).toURL();
             final HttpURLConnection connection = (HttpURLConnection) url.openConnection();
             connection.setRequestMethod("POST");
             connection.setDoOutput(true);
@@ -133,16 +136,13 @@ public class DataDumper {
      */
     @NotNull
     public String toFile() throws IOException {
-        final File filePath = getFilePath();
-
-        // Write the data from #getString to the file using a writer
-        try (final FileWriter writer = new FileWriter(filePath, StandardCharsets.UTF_8, false)) {
-            writer.write(toString());
+        final Path filePath = getFilePath();
+        try (final FileWriter writer = new FileWriter(filePath.toFile(), StandardCharsets.UTF_8, false)) {
+            writer.write(toString()); // Write the data from #getString to the file using a writer
+            return filePath.toString();
         } catch (IOException e) {
             throw new IOException("Failed to write data to file", e);
         }
-
-        return "~/plugins/HuskSync/dumps/" + filePath.getName();
     }
 
     /**
@@ -152,8 +152,8 @@ public class DataDumper {
      * @throws IOException if the prerequisite dumps parent folder could not be created
      */
     @NotNull
-    private File getFilePath() throws IOException {
-        return new File(getDumpsFolder(), getFileName());
+    private Path getFilePath() throws IOException {
+        return getDumpsFolder().resolve(getFileName());
     }
 
     /**
@@ -163,14 +163,12 @@ public class DataDumper {
      * @throws IOException if the folder could not be created
      */
     @NotNull
-    private File getDumpsFolder() throws IOException {
-        final File dumpsFolder = new File(plugin.getDataFolder(), "dumps");
-        if (!dumpsFolder.exists()) {
-            if (!dumpsFolder.mkdirs()) {
-                throw new IOException("Failed to create user data dumps folder");
-            }
+    private Path getDumpsFolder() throws IOException {
+        final Path dumps = plugin.getConfigDirectory().resolve("dumps");
+        if (!Files.exists(dumps)) {
+            Files.createDirectory(dumps);
         }
-        return dumpsFolder;
+        return dumps;
     }
 
     /**
@@ -181,11 +179,11 @@ public class DataDumper {
     @NotNull
     private String getFileName() {
         return new StringJoiner("_")
-                .add(user.getUsername())
-                .add(snapshot.getTimestamp().format(DateTimeFormatter.ofPattern("yyyy-MM-dd_HH-mm-ss")))
-                .add(snapshot.getSaveCause().name().toLowerCase(Locale.ENGLISH))
-                .add(snapshot.getShortId())
-                + ".json";
+                       .add(user.getUsername())
+                       .add(snapshot.getTimestamp().format(DateTimeFormatter.ofPattern("yyyy-MM-dd_HH-mm-ss")))
+                       .add(snapshot.getSaveCause().name().toLowerCase(Locale.ENGLISH))
+                       .add(snapshot.getShortId())
+               + ".json";
     }
 
 }
